syntax = "proto3"

package internal.grpc.proto

message CreateShortURLRequest {
  string url = 1
  string user_id = 2
}

message CreateShortURLResponce {
  string short_url = 1
  string error = 2
}

message CreateBatchShortURLRequest {
  repeated string url = 1
  string user_id = 2
}

message CreateBatchShortURLResponce {
  repeated string short_url = 1
  string error = 2
}

message GetFullURLRequest {
  string short_url = 1
  string user_id = 2
}

message GetFullURLResponce {
  string url = 1
  string error = 2
}

message GetUserURLRequest {
  string user_id = 1
}

message GetUserURLResponce {
  repeated string url = 1
  repeated string short_url = 2
}

message DeleteUserURLRequest {
  string user_id = 1
  repeated string short_url = 2
}

message DeleteUserURLResponce {
  string error = 1
}

message GetShortenerStatsRequest {
  string user_id = 1
}

message GetShortenerStatsResponce {
  repeated int32 url_count = 1
  repeated int32 user_count = 2
}


service Shortener {
    rpc CreateShortURL(CreateShortURLRequest) returns (CreateShortURLResponce)
    rpc CreateBatchShortURL(CreateBatchShortURLRequest) returns (CreateBatchShortURLResponce)
    rpc GetFullURL(GetFullURLRequest) returns (GetFullURLResponce)
    rpc GetUserURL(GetUserURLRequest) returns (GetUserURLResponce)
    rpc DeleteUserURL(DeleteUserURLRequest) returns (DeleteUserURLResponce)
    rpc GetShortenerStats(GetShortenerStatsRequest) returns (GetShortenerStatsResponce)
}